--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bull": "^3.1.0",
     "djsv": "^1.3.0",
     "ioredis": "^3.1.4",
-    "redis-utils.rf": "^1.0.1",
+    "redis-utils.hkube": "^1.0.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
