--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "producer-consumer.hkube",
+  "name": "@hkube/producer-consumer",
   "version": "1.0.11",
   "description": "producer consumer message queue based on Redis.",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "bull": "^3.1.0",
     "djsv": "^1.3.0",
     "ioredis": "^3.1.4",
-    "redis-utils.hkube": "^1.0.1",
+    "@hkube/redis-utils": "^1.0.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
