--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hkube/producer-consumer",
   "version": "1.0.15",
-  "description": "producer consumer message queue based on Redis.",
+  "description": "producer consumer message queue based on Redis",
   "main": "index.js",
   "directories": {
     "lib": "lib",
