--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "devDependencies": {
     "@hkube/metrics": "^1.0.13",
     "chai": "^4.1.2",
+    "istanbul": "^1.1.0-alpha.1",
+    "coveralls": "^3.0.0",
     "mocha": "^3.5.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test-travis": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec test"
   },
   "author": "Nassi Harel",
   "license": "ISC"
