travis CI ignore snyk errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 install:
 - npm install
 - npm install -g snyk
-- snyk test
+- snyk test || true
 cache:
   directories:
   - node_modules
